Add `-w` to buildx ldflags

--- a/deb/common/rules
+++ b/deb/common/rules
@@ -40,7 +40,7 @@ override_dh_auto_build:
 			go build \
 				-mod=vendor \
 				-trimpath \
-				-ldflags "-X github.com/docker/buildx/version.Version=$(BUILDX_VERSION) -X github.com/docker/buildx/version.Revision=$(BUILDX_GITCOMMIT) -X github.com/docker/buildx/version.Package=github.com/docker/buildx" \
+				-ldflags "-w -X github.com/docker/buildx/version.Version=$(BUILDX_VERSION) -X github.com/docker/buildx/version.Revision=$(BUILDX_GITCOMMIT) -X github.com/docker/buildx/version.Package=github.com/docker/buildx" \
 				-o "/usr/libexec/docker/cli-plugins/docker-buildx" \
 				./cmd/buildx
 
